Fix (advantages.css, form.css) z-index for section \ form changes img btn

--- a/assets/styles/blocks/advantages.css
+++ b/assets/styles/blocks/advantages.css
@@ -36,6 +36,7 @@
         background-color: transparent;
         overflow: unset;
         box-shadow: unset;
+        z-index: -1;
     }
 }
 
